@@ -1,4 +1,5 @@
 # This file is included in various Makefile's to get version information.
+# Compatible with Bourne shell syntax, so it can included there too.
 
 # The gcc version required to compile the library.
 GNUSTEP_GUI_GCC=2.8.0
