@@ -1,3 +1,8 @@
+Tue Dec  1 09:58:20 1998  Adam Fedor  <fedor@ultra.doc.com>
+
+	* Source/NSWorkspace.m ([NSWorkspace -findApplications]): Check
+	for data before calling deserializer.
+
 Tue Dec  1 10:25:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* NSApplication.m: Fixed auto-enable of services menu.
